--- a/templates/base/footer.html
+++ b/templates/base/footer.html
@@ -64,7 +64,7 @@
                                 <span class="flaticon-interface"></span>
                             </div>
                             <div class="text-holder">
-                                <h5>Getwell@Hospitals.com</h5>
+                                <h5>Srojiddin4879@icloud.com</h5>
                             </div>
                         </li>
                         <li>
@@ -72,7 +72,7 @@
                                 <span class="flaticon-technology-1"></span>
                             </div>
                             <div class="text-holder">
-                                <h5>(123) 0200 12345 & 7890</h5>
+                                <h5>0550180088</h5>
                             </div>
                         </li>
                         <li>
@@ -80,7 +80,7 @@
                                 <span class="flaticon-clock"></span>
                             </div>
                             <div class="text-holder">
-                                <h5>Mon-Satday: 9am to 18pm</h5>
+                                <h5>Mon-Friday 9am to 18pm</h5>
                             </div>
                         </li>
                     </ul>
@@ -88,32 +88,7 @@
             </div>
             <!--Start single footer widget-->
             <!--Start single footer widget-->
-            <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
-                <div class="single-footer-widget clearfix">
-                    <div class="title">
-                        <h3>Make an Appointment</h3>
-                        <span class="border"></span>
-                    </div>
-                    <form class="appointment-form" action="#">
-                        <div class="input-box">
-                            <input type="text" name="form_name" value="" placeholder="Your Name" required="">
-                            <div class="icon-box">
-                                <i class="fa fa-user" aria-hidden="true"></i>
-                            </div>
-                        </div>
-                        <div class="input-box">
-                            <input type="email" name="form_email" value="" placeholder="Your Email" required="">
-                            <div class="icon-box">
-                                <i class="fa fa-envelope" aria-hidden="true"></i>
-                            </div>
-                        </div>
-                        <div class="input-box">
-                            <textarea name="form_message" placeholder="Your Message.." required="" aria-required="true"></textarea>
-                        </div>
-                        <button type="submit">submit</button>
-                    </form>
-                </div>
-            </div>
+           
             <!--End single footer widget-->
         </div>
     </div>
