--- a/templates/base/mainmenu.html
+++ b/templates/base/mainmenu.html
@@ -28,8 +28,8 @@
                                 </ul>
 
                             </li>
-                            <li class="dropdown"><a href="{% url 'departments' %}">Departments</a>
-                                <ul>
+                            {% comment %} <li class="dropdown"><a href="{% url 'departments' %}">Departments</a> {% endcomment %}
+                                {% comment %} <ul>
                                     <li><a href="cardiac-clinic.html">Cardiac Clinic</a></li>
                                     <li><a href="pulmonology.html">Pulmonology</a></li>
                                     <li><a href="gynecology.html">Gynecology</a></li>
@@ -38,7 +38,7 @@
                                     <li><a href="gastrology.html">Gastrology</a></li>
                                     <li><a href="pediatrician.html">Pediatrician</a></li>
                                     <li><a href="laborotory.html">Laborotory</a></li>
-                                </ul>
+                                </ul> {% endcomment %}
                             </li>
                             <li><a href="{% url 'time_table' %}">Time Table</a></li>
                             <li class="dropdown"><a href="{% url 'blog' %}">News</a>
@@ -48,12 +48,17 @@
                                     <li><a href="{% url 'blog-single' %}">News Single Post</a></li>
                                 </ul>
                             </li>
-                            <li class="dropdown"><a href="{% url 'shop' %}">Shop</a>
+                            <li class="dropdown">
+                                <a href="{% url 'shop' %}">Shop</a>
                                 <ul>
                                     <li><a href="{% url 'shop' %}">Shop Products</a></li>
-                                    <li><a href="{% url 'product-single' %}">Products Single</a></li>
+                                    {% for product in products %}
+                                    <a href="{% url 'medicine_detail' pk=product.pk %}"> {{ product.title }} </a>
+                                    <!-- Ensure product.pk is a valid integer -->
+                                    {% endfor %}
                                     <li><a href="{% url 'cart' %}">Shopping Cart</a></li>
-                                    <li><a href="account.html">My Account</a></li>
+                                    <li><a href="{% url 'checkout' %}">Checkout</a></li>
+
                                 </ul>
                             </li>
                             <li class="dropdown"><a href="{% url 'register' %}">register</a>
@@ -72,7 +77,7 @@
                 <div class="mainmenu-right-box pull-right">
                     <div class="cart_select">
                          <a href="{% url 'cart' %}">
-                        <button><i class="fa fa-shopping-cart" aria-hidden="true"></i><span>(0)</span></button>
+                            <button><i class="fa fa-shopping-cart" aria-hidden="true"></i><span id="cart-item-count">{{ cart.total_items }}</span></button>
                              </a>
                     </div>
                     <div class="consultation-button">
