--- a/templates/base/shoparea.html
+++ b/templates/base/shoparea.html
@@ -1,4 +1,5 @@
 {% load static %}
+
 <section class="shop-area">
     <div class="container">
         <div class="row">
@@ -15,21 +16,41 @@
                                 </select>
                             </div>
                             <div class="showing pull-left">
-                                <p>Showing 1-9 of 12 results</p>
+                                <p>Showing 1-{{ products|length }} of {{ products|length }} results</p>
                             </div>
                         </div>
                     </div>
                     <div class="row">
                         {% for medicine in products %}
-                        <!--Start single product item-->
+                        <!-- Start single product item -->
                         <div class="col-md-4 col-sm-12 col-xs-12">
                             <div class="single-product-item">
                                 <div class="img-holder">
-                                    <img src="{{ medicine.image_for_medicine.url}}" alt="Awesome Product Image">
+                                    {% if medicine.image %}
+                                    <img src="{{ medicine.image.url }}" alt="Awesome Product Image">
+                                     {% else %}
+    <p>No image available</p>
+{% endif %}
                                     <div class="overlay-style-one">
                                         <div class="box">
                                             <div class="content">
-                                                <a class="thm-btn bgclr-1" href="{% url 'cart' %}">Add to Cart</a>
+                                                <div class="product">
+                                                    <h3>{{ medicine.title }}</h3>
+                                                    <p>{{ medicine.description }}</p>
+                                                    <form action="{% url 'add_to_cart' medicine.pk %}" method="post">
+                                                        {% csrf_token %}
+                                                        <!-- Assuming AddToCartForm includes quantity field -->
+                                                        {{ form.quantity }}
+                                                        <button class="thm-btn bgclr-1 addtocart" type="submit">Add to Cart</button>
+                                                    </form>
+                                                    {% if request.user.is_superuser  %}
+                                                    <div class="admin-buttons">
+                                                        <a href="{% url 'medicine_create'  %}" class="btn btn-info btn-sm">Edit</a>
+                                                        <a href="{% url 'medicine_update' medicine.pk %}" class="btn btn-info btn-sm">Edit</a>
+                                                        <a href="{% url 'medicine_delete' medicine.pk %}" class="btn btn-danger btn-sm">Delete</a>
+                                                    </div>
+                                                    {% endif %}
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
@@ -39,66 +60,30 @@
                                         <div class="product-title pull-left">
                                             <h5>{{ medicine.name }}</h5>
                                         </div>
-                                        <div class="review-box pull-right">
-{#                                            <ul>#}
-{#                                                <li><i class="fa fa-star"></i></li>#}
-{#                                                <li><i class="fa fa-star"></i></li>#}
-{#                                                <li><i class="fa fa-star"></i></li>#}
-{#                                                <li><i class="fa fa-star"></i></li>#}
-{#                                                <li><i class="fa fa-star"></i></li>#}
-{#                                            </ul>#}
-                                        </div>
                                     </div>
                                     <div class="product-value">
-                                        <h4>{{ medicine.price_for_medicine }}</h4>
-                        {% endfor %}
+                                        <h4>{{ medicine.price }}</h4>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <!--End single product item-->
-                        <!--Start single product item-->
-                        <!--End single product item-->
-                        <!--Start single product item-->
-                        <!--End single product item-->
-                        <!--Start single product item-->
-                        <!--End single product item-->
-                        <!--Start single product item-->
-                        <!--End single product item-->
-                        <!--Start single product item-->
-                        <!--End single product item-->
-                        <!--Start single product item-->
-                        <!--End single product item-->
-                        <!--Start single product item-->
-                        <!--End single product item-->
-                        <!--Start single product item-->
-                        <!--End single product item-->
-                    </div>
-                    <div class="row">
-                        <div class="col-md-12">
-                            <ul class="post-pagination text-center">
-                                <li><a href="#"><i class="fa fa-caret-left" aria-hidden="true"></i></a></li>
-                                <li class="active"><a href="#">1</a></li>
-                                <li><a href="#">2</a></li>
-                                <li><a href="#">3</a></li>
-                                <li><a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i></a></li>
-                            </ul>
-                        </div>
+                        <!-- End single product item -->
+                        {% endfor %}
                     </div>
                 </div>
             </div>
-            <!--Start sidebar Wrapper-->
+            <!-- Start Sidebar Wrapper -->
             <div class="col-lg-3 col-md-7 col-sm-7 col-xs-12 pull-left">
                 <div class="sidebar-wrapper">
-                    <!--Start single sidebar-->
+                    <!-- Start single sidebar -->
                     <div class="single-sidebar">
                         <form class="search-form" action="#">
-							<input placeholder="Search..." type="text">
-							<button type="submit"><i class="fa fa-search" aria-hidden="true"></i></button>
-						</form>
+                            <input placeholder="Search..." type="text">
+                            <button type="submit"><i class="fa fa-search" aria-hidden="true"></i></button>
+                        </form>
                     </div>
-                    <!--End single sidebar-->
-                    <!--Start single sidebar-->
+                    <!-- End single sidebar -->
+                    <!-- Start single sidebar -->
                     <div class="single-sidebar">
                         <div class="sec-title">
                             <h3>Categories</h3>
@@ -110,119 +95,15 @@
                             <li><a href="#">Electronic Scales <span>(10)</span></a></li>
                         </ul>
                     </div>
-                    <!--End single sidebar-->
-                    <!--Start single sidebar-->
-                    <!--Start single sidebar-->
-                    <div class="single-sidebar">
-                        <div class="sec-title">
-                            <h3>Filter By Price</h3>
-                        </div>
-                        <div class="price-ranger">
-                            <div id="slider-range"></div>
-                            <div class="ranger-min-max-block">
-                                <input type="submit" value="Filter">
-                                <span>Price:</span>
-                                <input type="text" readonly class="min">
-                                <span>-</span>
-                                <input type="text" readonly class="max">
-                            </div>
-                        </div>
-                    </div>
-                    <!--End single sidebar-->
-                    <!--End single sidebar-->
-                    <!--Start single sidebar-->
-                    <div class="single-sidebar">
-                        <div class="sec-title">
-                            <h3>Popular Products</h3>
-                        </div>
-                        <ul class="popular-product">
-                            <li>
-                                <div class="img-holder">
-                                    <img src="{% static 'images/shop/product-thumb-1.jpg' %}" alt="Awesome Image">
-                                    <div class="overlay-style-one">
-                                        <div class="box">
-                                            <div class="content">
-                                                <a href="#"><i class="fa fa-link" aria-hidden="true"></i></a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="title-holder">
-                                    <a href="#">
-                                        <h4>Injection Vial</h4>
-                                    </a>
-                                    <h5>$34.99</h5>
-                                    <div class="review-box">
-                                        <ul>
-                                            <li><i class="fa fa-star"></i></li>
-                                            <li><i class="fa fa-star"></i></li>
-                                            <li><i class="fa fa-star"></i></li>
-                                            <li><i class="fa fa-star"></i></li>
-                                            <li><i class="fa fa-star"></i></li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="img-holder">
-                                    <img src="images/shop/product-thumb-2.jpg" alt="Awesome Image">
-                                    <div class="overlay-style-one">
-                                        <div class="box">
-                                            <div class="content">
-                                                <a href="#"><i class="fa fa-link" aria-hidden="true"></i></a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="title-holder">
-                                    <a href="#">
-                                        <h4>Supplement Tab</h4>
-                                    </a>
-                                    <h5>$29.00</h5>
-                                    <div class="review-box">
-                                        <ul>
-                                            <li><i class="fa fa-star"></i></li>
-                                            <li><i class="fa fa-star"></i></li>
-                                            <li><i class="fa fa-star"></i></li>
-                                            <li><i class="fa fa-star"></i></li>
-                                            <li><i class="fa fa-star"></i></li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="img-holder">
-                                    <img src="images/shop/product-thumb-3.jpg" alt="Awesome Image">
-                                    <div class="overlay-style-one">
-                                        <div class="box">
-                                            <div class="content">
-                                                <a href="#"><i class="fa fa-link" aria-hidden="true"></i></a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="title-holder">
-                                    <a href="#">
-                                        <h4>Smiley Ball-24</h4>
-                                    </a>
-                                    <h5>$24.99</h5>
-                                    <div class="review-box">
-                                        <ul>
-                                            <li><i class="fa fa-star"></i></li>
-                                            <li><i class="fa fa-star"></i></li>
-                                            <li><i class="fa fa-star"></i></li>
-                                            <li><i class="fa fa-star"></i></li>
-                                            <li><i class="fa fa-star"></i></li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                    <!--End single sidebar-->
+                    <!-- End single sidebar -->
+                    <!-- Start single sidebar -->
+
+                    <!-- Start single sidebar -->
+
+                    <!-- End single sidebar -->
                 </div>
             </div>
-            <!--End Sidebar Wrapper-->
+            <!-- End Sidebar Wrapper -->
         </div>
     </div>
 </section>
