--- a/templates/gallery/gallery_delete.html
+++ b/templates/gallery/gallery_delete.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Удаление галереи</title>
+    <title>Удаление препарата</title>
 </head>
 <body>
-    <h2>Вы уверены, что хотите удалить эту галерею?</h2>
-    <form method="post"enctype="multipart/form-data">
+    <h2>Вы уверены, что хотите удалить этот препарат?</h2>
+    <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         <button type="submit">Да, удалить</button>
-        <a href="{% url 'gallery' %}">Отмена</a>
+        <a href="{% url 'shop' %}">Отмена</a>
     </form>
 </body>
 </html>
