--- a/templates/project.html
+++ b/templates/project.html
@@ -85,9 +85,12 @@
              {% for gallery in blogs %}
             <!--Start single project item-->
             <div class="col-md-4 col-sm-4 col-xs-12 filter-item robustness workouts">
-                <div class="single-project-item">
-                    <div class="img-holder">
-                        <img src="{{ gallery.image_for_Gallery.url }}" alt="Awesome Image">
+                <div class="project-single-carousel">
+                    <!--Start single project item-->
+                    <div class="single-project-item">
+                        <div class="img-holder">
+                            <img src="{{  gallery.image_for_Gallery.url }}" alt="Awesome Image">
+                        </div> 
                         <div class="overlay-style-one">
                             <div class="box">
                                 <div class="content">
