--- a/templates/shop-single.html
+++ b/templates/shop-single.html
@@ -105,7 +105,7 @@
                                         <li><i class="fa fa-star-half"></i></li>
                                     </ul>
                                 </div>
-                                <span class="price">{{ medicine.price_for_medicine }}</span>
+                                <span class="price">{{ medicine.price}}</span>
                                 <div class="text">
                                     <p>{{ medicine.description }}</p>
                                 </div>
@@ -119,7 +119,14 @@
                                </div>
                                 <div class="addto-cart-box clearfix">
                                     <input class="quantity-spinner" type="text" value="2" name="quantity">
-                                    <button class="thm-btn bgclr-1 addtocart" type="submit">Add to Cart</button>
+                                    <h1>{{ medicine.title }}</h1>
+                                    <p>{{ meidcine.description }}</p>
+                                    <p>Price: ${{ medicine.price }}</p>
+                                    <form action="{% url 'add_to_cart' medicine.pk %}" method="post">
+                                        {% csrf_token %}
+                                        {{ form.as_p }}
+                                        <button type="submit">Add to Cart</button>
+                                    </form>
                                 </div>    
                             </div>
                         </div>
