--- a/templates/shop.html
+++ b/templates/shop.html
@@ -22,22 +22,22 @@
 <!--End header area-->  
 
 <!--Start header-search  area-->
-{#<section class="header-search">#}
-{#    <div class="container">#}
-{#        <div class="row">#}
-{#            <div class="col-md-12 col-sm-12 col-xs-12">#}
-{#                <div class="search-form pull-right">#}
-{#                    <form action="#">#}
-{#                        <div class="search">#}
-{#                            <input type="search" name="search" value="" placeholder="Search">#}
-{#                            <button type="submit"><i class="fa fa-search" aria-hidden="true"></i></button>#}
-{#                        </div>#}
-{#                    </form>#}
-{#                </div>#}
-{#            </div>#}
-{#        </div>#}
-{#    </div>#}
-{#</section>#}
+<section class="header-search">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 col-sm-12 col-xs-12">
+                <div class="search-form pull-right">
+                    <form action="#">
+                        <div class="search">
+                            <input type="search" name="search" value="" placeholder="Search">
+                            <button type="submit"><i class="fa fa-search" aria-hidden="true"></i></button>
+                       </div>
+                   </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 <!--End header-search  area-->        
 
 <!--Start mainmenu area-->
