--- a/templates/shopping-cart.html
+++ b/templates/shopping-cart.html
@@ -89,123 +89,106 @@
                         <thead class="cart-header">
                             <tr>
                                 <th class="prod-column">Products</th>
-                                <th>&nbsp;</th>
                                 <th>Quantity</th>
                                 <th class="availability">Availability</th>
                                 <th class="price">Price</th>
                                 <th>Total</th>
                                 <th>Remove</th>
-                            </tr>    
+                            </tr>
                         </thead>
                         <tbody>
+                            {% for item in cart.items_cart.all %}
                             <tr>
-                                <td colspan="2" class="prod-column">
+                                <td class="prod-column">
                                     <div class="column-box">
                                         <div class="prod-thumb">
-                                            <a href="#"><img src="images/shop/product-thumb-1.jpg" alt=""></a>
+                                            <img src="{{ item.product.image.url }}" alt="{{ item.product.title }}">
                                         </div>
                                         <div class="title">
-                                            <h3 class="prod-title">Portable Mobile Stand</h3>
-                                        </div>    
+                                            <h3 class="prod-title">{{ item.product.title }}</h3>
+                                        </div>
                                     </div>
                                 </td>
                                 <td class="qty">
-                                    <input class="quantity-spinner" type="text" value="1" name="quantity">
+                                    <form action="{% url 'minus_quantity' item.id %}" method="post">
+                                        {% csrf_token %}
+                                        <button type="submit">-</button>
+                                    </form>
+                                    {{ item.quantity }}
+                                    <form action="{% url 'plus_quantity' item.id %}" method="post">
+                                        {% csrf_token %}
+                                        <button type="submit">+</button>
+                                    </form>
                                 </td>
-                                <td class="unit-price">
+                                <td class="availability">
                                     <div class="available-info">
-                                        <span class="icon fa fa-check"></span>Item(s)<br>Avilable Now
+                                        <span class="icon fa fa-check"></span> Available Now
                                     </div>
                                 </td>
-                                <td class="price">$34.99</td>
-                                <td class="sub-total">$69.98</td>
+                                <td class="price">${{ item.product.price }}</td>
+                                <td class="sub-total">${{ item.get_subtotal_sum }}</td>
                                 <td>
-                                    <div class="remove">
-                                        <div class="checkbox">
-                                            <label>
-                                                <input name="remove" type="checkbox">
-                                                <span>Remove</span>
-                                            </label>
-                                        </div>   
-                                    </div>
+                                    <form action="{% url 'remove_from_cart' item.id %}" method="post">
+                                        {% csrf_token %}
+                                        <button type="submit">Remove</button>
+                                    </form>
                                 </td>
                             </tr>
-                            <tr>
-                                <td colspan="2" class="prod-column">
-                                    <div class="column-box">
-                                        <div class="prod-thumb">
-                                            <a href="#"><img src="images/shop/product-thumb-2.jpg" alt=""></a>
-                                        </div>
-                                        <div class="title">
-                                            <h3 class="prod-title">Portable Mobile Stand</h3>
-                                        </div>    
-                                    </div>
-                                </td>
-                                <td class="qty">
-                                    <input class="quantity-spinner" type="text" value="2" name="quantity">
-                                </td>
-                                <td class="unit-price">
-                                    <div class="available-info">
-                                        <span class="icon fa fa-check"></span>Item(s)<br>Avilable Now
-                                    </div>
-                                </td>
-                                <td class="price">$29.99</td>
-                                <td class="sub-total">$29.99</td>
-                                <td>
-                                    <div class="remove">
-                                        <div class="checkbox">
-                                            <label>
-                                                <input name="remove" type="checkbox">
-                                                <span>Remove</span>
-                                            </label>
-                                        </div>   
-                                    </div>
-                                </td>
-                            </tr>
-                        </tbody>    
+                            {% endfor %}
+                        </tbody>
                     </table>
                 </div>
-            </div>     
+            </div>
         </div>
         <div class="row cart-middle">
             <div class="col-md-6 col-sm-8 col-xs-12">
                 <div class="apply-coupon">
-                    <input type="text" name="coupon-code" value="" placeholder="Enter Coupon Code...">
-                    <div class="apply-coupon-button">
-                        <button class="thm-btn bgclr-1" type="button">Apply Coupon</button>
-                    </div>        
+                    <!-- Apply Coupon form -->
+                    <form action="{% url 'apply_coupon' %}" method="post">
+                        {% csrf_token %}
+                        <input type="text" name="coupon-code" value="" placeholder="Enter Coupon Code...">
+                        <div class="apply-coupon-button">
+                            <button class="thm-btn bgclr-1" type="submit">Apply Coupon</button>
+                        </div>
+                    </form>
                 </div>
             </div>
             <div class="col-md-6 col-sm-4 col-xs-12">
                 <div class="update-cart pull-right">
-                    <button class="thm-btn bgclr-1" type="button">Update Cart</button>
+                    <!-- Update Cart button (potentially using AJAX) -->
+                    <button class="thm-btn bgclr-1" id="update-cart-btn" type="button">Update Cart</button>
                 </div>
             </div>
         </div>
-        <div class="row cart-bottom">
+        <!-- Bottom section with Calculate Shipping, Update Totals, and Proceed to Checkout -->
+     <div class="row cart-bottom">
             <div class="col-md-6">
                 <div class="calculate-shipping">
                     <div class="sec-title">
                         <h1>Calculate Shipping</h1>
                     </div>
-                    <select class="selectmenu">
-                        <option selected="selected">United Kingdom (UK)</option>
-                        <option>United Kingdom (UK)</option>
-                        <option>United State (USA)</option>
-                        <option>France</option>
-				    </select>
-                    <div class="row">
-                        <div class="col-lg-6">
-                            <input class="mar-bottom" type="text" placeholder="State / Country" required>
+                    <!-- Calculate Shipping form -->
+                    <form action="{% url 'calculate_shipping' %}" method="post">
+                        {% csrf_token %}
+                        <select class="selectmenu" name="country">
+                            <option selected="selected">United Kingdom (UK)</option>
+                            <option>United States (USA)</option>
+                            <option>France</option>
+                            <!-- Add more options as needed -->
+                        </select>
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <input class="mar-bottom" type="text" name="state_country" placeholder="State / Country" required>
+                            </div>
+                            <div class="col-lg-6">
+                                <input class="zip-code" type="text" name="zip_code" placeholder="Zip Code" required>
+                            </div>
                         </div>
-                        <div class="col-lg-6">
-                            <input class="zip-code" type="text" placeholder="Zip Code" required>
-                        </div>
-                    </div>
-				    <button class="thm-btn bgclr-1" type="submit">update Totals</button> 
+                        <button class="thm-btn bgclr-1" type="submit">Update Totals</button>
+                    </form>
                 </div>
-            </div>
-            <!--Start cart total -->
+            </div> 
+            <!-- Cart Total section -->
             <div class="col-lg-6 col-md-6">
                 <div class="cart-total">
                     <div class="sec-title">
@@ -214,24 +197,24 @@
                     <ul class="cart-total-table">
                         <li class="clearfix">
                             <span class="col col-title">Cart Subtotal</span>
-                            <span class="col">$146.00</span>    
+                            <span class="col">${{ cart.get_total_sum }}</span>
                         </li>
                         <li class="clearfix">
                             <span class="col col-title">Shipping and Handling</span>
-                            <span class="col">$40.00- <b>Calculate Shipping</b></span>    
+                            <span class="col">$40.00- <b>Calculate Shipping</b></span>
                         </li>
                         <li class="clearfix">
                             <span class="col col-title">Order Total</span>
-                            <span class="col">$146.00</span>    
-                        </li>      
+                            <span class="col">${{ cart.get_total_sum }}</span>
+                        </li>
                     </ul>
-                    <button class="thm-btn bgclr-1 checkout-btn">Proceed to Checkout</button> 
-                </div>    
+                    <!-- Proceed to Checkout button -->
+                    <a href="{% url 'checkout' %}" class="thm-btn bgclr-1 checkout-btn">Proceed to Checkout</a>
+                </div>
             </div>
-            <!--End cart total -->
         </div>
-    </div>
-</section>         
+        
+</section>
 <!--End cart area-->
 
 <!--Start footer area-->
