--- a/templates/base/mainmenu.html
+++ b/templates/base/mainmenu.html
@@ -80,10 +80,10 @@
                             <button><i class="fa fa-shopping-cart" aria-hidden="true"></i><span id="cart-item-count">{{ cart.total_items }}</span></button>
                              </a>
                     </div>
-                    <div class="consultation-button">
+                    {% comment %} <div class="consultation-button">
                         <a href="{% url 'create-appointments' %}">For Consultation</a>
                     </div>
-                </div>
+                </div> {% endcomment %}
                 <!--End mainmenu right box-->
             </div>
         </div>
