--- a/templates/base/shoparea.html
+++ b/templates/base/shoparea.html
@@ -35,8 +35,8 @@
                                         <div class="box">
                                             <div class="content">
                                                 <div class="product">
-                                                    <h3>{{ medicine.title }}</h3>
-                                                    <p>{{ medicine.description }}</p>
+                                                    {% comment %} <h3>{{ medicine.title }}</h3> {% endcomment %}
+                                                    {% comment %} <p>{{ medicine.description }}</p> {% endcomment %}
                                                     <form action="{% url 'add_to_cart' medicine.pk %}" method="post">
                                                         {% csrf_token %}
                                                         <!-- Assuming AddToCartForm includes quantity field -->
@@ -58,7 +58,7 @@
                                 <div class="title-holder">
                                     <div class="top clearfix">
                                         <div class="product-title pull-left">
-                                            <h5>{{ medicine.name }}</h5>
+                                            <h5>{{ medicine.title}}</h5>
                                         </div>
                                     </div>
                                     <div class="product-value">
@@ -72,38 +72,8 @@
                     </div>
                 </div>
             </div>
-            <!-- Start Sidebar Wrapper -->
-            <div class="col-lg-3 col-md-7 col-sm-7 col-xs-12 pull-left">
-                <div class="sidebar-wrapper">
-                    <!-- Start single sidebar -->
-                    <div class="single-sidebar">
-                        <form class="search-form" action="#">
-                            <input placeholder="Search..." type="text">
-                            <button type="submit"><i class="fa fa-search" aria-hidden="true"></i></button>
-                        </form>
-                    </div>
-                    <!-- End single sidebar -->
-                    <!-- Start single sidebar -->
-                    <div class="single-sidebar">
-                        <div class="sec-title">
-                            <h3>Categories</h3>
-                        </div>
-                        <ul class="categories clearfix">
-                            <li><a href="#">Fitness Kit <span>(6)</span></a></li>
-                            <li><a href="#">Healthy Foods <span>(2)</span></a></li>
-                            <li><a href="#">Accessories <span>(5)</span></a></li>
-                            <li><a href="#">Electronic Scales <span>(10)</span></a></li>
-                        </ul>
-                    </div>
-                    <!-- End single sidebar -->
-                    <!-- Start single sidebar -->
-
-                    <!-- Start single sidebar -->
-
-                    <!-- End single sidebar -->
-                </div>
-            </div>
-            <!-- End Sidebar Wrapper -->
-        </div>
-    </div>
+        </div>     
+    </div>   
+</div>
+</div>
 </section>
