--- a/templates/blog-default.html
+++ b/templates/blog-default.html
@@ -109,10 +109,28 @@
                                         <li><a href="#"><i class="fa fa-calendar" aria-hidden="true"></i>{{ blog.creation_date }}</a></li>
                                         <li><a href="#"><i class="fa fa-comments-o" aria-hidden="true"></i>21 Comments</a></li>
                                     </ul>
+                                    {% if request.user.is_superuser %}
+                                    <div class="admin-buttons">
+                                        <a href="{% url 'create_blog' %}" class="btn btn-primary">created</a>
+                                        <a href="{% url 'update' blog.id %}" class="btn btn-primary">Редактировать</a>
+                                        <a href="{% url 'delete' blog.id %}" class="btn btn-danger">Удалить</a>
+                                    </div>
+                                    {% endif %}
                                 </div>    
                             </div>
+                            {% endfor %}
                         </div>
-                        {% endfor %}
+                    </div>
+                </div>
+                {% if request.user.is_superuser %}
+                <div class="create-button">
+                    <a href="{% url 'create_blog' %} " class="btn btn-success">Создать новый блог</a>
+                </div>
+                {% endif %}
+            </div>
+        </div>
+    </div>
+</section>
                         <!--End single blog post-->
                         <!--Start single blog post-->
 {#                        <!--End single blog post-->#}
@@ -145,199 +163,7 @@
                 </div>
             </div>
             <!--Start sidebar Wrapper-->
-            <div class="col-lg-4 col-md-6 col-sm-7 col-xs-12">
-                <div class="sidebar-wrapper">
-                    <!--Start single sidebar-->
-                    <div class="single-sidebar wow fadeInUp" data-wow-delay="0s" data-wow-duration="1s" data-wow-offset="0">
-                        <form class="search-form" action="#">
-							<input placeholder="Search..." type="text">
-							<button type="submit"><i class="fa fa-search" aria-hidden="true"></i></button>
-						</form>
-                    </div>
-                    <!--End single sidebar-->
-                    <!--Start single sidebar-->
-                    <div class="single-sidebar wow fadeInUp" data-wow-delay="0s" data-wow-duration="1s" data-wow-offset="0">
-                        <div class="sec-title">
-                            <h3>Categories</h3>
-                        </div>
-                        <ul class="categories clearfix">
-                            <li><a href="#">Procedures<span>(6)</span></a></li>
-                            <li><a href="#">Transplantation<span>(2)</span></a></li>
-                            <li><a href="#">Management<span>(5)</span></a></li>
-                            <li><a href="#">Healthcare Tips<span>(10)</span></a></li>
-                            <li><a href="#">Uncategorized<span>(4)</span></a></li>
-                        </ul>
-                    </div>
-                    <!--End single sidebar-->
-                    <!--Start single sidebar--> 
-                    <div class="single-sidebar wow fadeInUp" data-wow-delay="0s" data-wow-duration="1s" data-wow-offset="0">
-                        <div class="sec-title">
-                            <h3>Popular Posts</h3>
-                        </div>
-                        <ul class="popular-post">
-                            <li>
-                                <div class="img-holder">
-                                    <img src="images/sidebar/popular-post-1.jpg" alt="Awesome Image">
-                                    <div class="overlay-style-one">
-                                        <div class="box">
-                                            <div class="content">
-                                                <a href="#"><i class="fa fa-link" aria-hidden="true"></i></a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="title-holder">
-                                    <a href="#"><h5 class="post-title">How to handle your kids’<br> from mystery ailments</h5></a>
-                                    <h6 class="post-date">June 21, 2017</h6>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="img-holder">
-                                    <img src="images/sidebar/popular-post-2.jpg" alt="Awesome Image">
-                                    <div class="overlay-style-one">
-                                        <div class="box">
-                                            <div class="content">
-                                                <a href="#"><i class="fa fa-link" aria-hidden="true"></i></a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="title-holder">
-                                    <a href="#"><h5 class="post-title">Lung cancer survival rate in <br>England improves</h5></a>
-                                    <h6 class="post-date">February 14, 2017</h6>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="img-holder">
-                                    <img src="images/sidebar/popular-post-3.jpg" alt="Awesome Image">
-                                    <div class="overlay-style-one">
-                                        <div class="box">
-                                            <div class="content">
-                                                <a href="#"><i class="fa fa-link" aria-hidden="true"></i></a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="title-holder">
-                                    <a href="#"><h5 class="post-title">Negative statin stories add <br>to heart health risk</h5></a>
-                                    <h6 class="post-date">January 17, 2017</h6>
-                                </div>
-                            </li>
-                           
-                           
-                        </ul>
-                    </div>
-                    <!--End single sidebar-->
-                    <!--Start single-sidebar-->    
-                    <div class="single-sidebar wow fadeInUp" data-wow-delay="0s" data-wow-duration="1s" data-wow-offset="0">
-                        <div class="sec-title">
-                            <h3 class="pull-left">Instagram</h3>
-                            <a class="pull-right follow-us" href="#">Follow Us</a>
-                        </div>
-                        <ul class="instagram">
-                            <li>
-                                <div class="img-holder">
-                                    <img src="images/sidebar/instagram-1.jpg" alt="Awesome Image">
-                                    <div class="overlay-style-one">
-                                        <div class="box">
-                                            <div class="content">
-                                                <a href="#"><i class="fa fa-link" aria-hidden="true"></i></a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="img-holder">
-                                    <img src="images/sidebar/instagram-2.jpg" alt="Awesome Image">
-                                    <div class="overlay-style-one">
-                                        <div class="box">
-                                            <div class="content">
-                                                <a href="#"><i class="fa fa-link" aria-hidden="true"></i></a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="img-holder">
-                                    <img src="images/sidebar/instagram-3.jpg" alt="Awesome Image">
-                                    <div class="overlay-style-one">
-                                        <div class="box">
-                                            <div class="content">
-                                                <a href="#"><i class="fa fa-link" aria-hidden="true"></i></a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="img-holder">
-                                    <img src="images/sidebar/instagram-4.jpg" alt="Awesome Image">
-                                    <div class="overlay-style-one">
-                                        <div class="box">
-                                            <div class="content">
-                                                <a href="#"><i class="fa fa-link" aria-hidden="true"></i></a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="img-holder">
-                                    <img src="images/sidebar/instagram-5.jpg" alt="Awesome Image">
-                                    <div class="overlay-style-one">
-                                        <div class="box">
-                                            <div class="content">
-                                                <a href="#"><i class="fa fa-link" aria-hidden="true"></i></a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="img-holder">
-                                    <img src="images/sidebar/instagram-6.jpg" alt="Awesome Image">
-                                    <div class="overlay-style-one">
-                                        <div class="box">
-                                            <div class="content">
-                                                <a href="#"><i class="fa fa-link" aria-hidden="true"></i></a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                    <!--End single-sidebar-->
-                    <!--Start single-sidebar-->
-                    <div class="single-sidebar wow fadeInUp" data-wow-delay="0s" data-wow-duration="1s" data-wow-offset="0">
-                        <div class="sec-title">
-                            <h3>Facebook Feed</h3>
-                        </div>
-                        <div class="fb-feed">
-                            <img src="images/sidebar/facebook-feed.jpg" alt="">
-                        </div>
-                    </div>
-                    <!--End single-sidebar-->
-                    <!--Start single-sidebar-->
-                    <div class="single-sidebar wow fadeInUp" data-wow-delay="0s" data-wow-duration="1s" data-wow-offset="0">
-                        <div class="sec-title">
-                            <h3>Tag Cloud</h3>
-                        </div>
-                        <ul class="popular-tag">
-                            <li><a href="#">Ideas</a></li>
-                            <li><a href="#">Doctor</a></li>
-                            <li><a href="#">Experts</a></li>
-                            <li><a href="#">Tips</a></li>
-                            <li><a href="#">Health</a></li>
-                            <li><a href="#">Services</a></li>
-                            <li><a href="#">Growth</a></li>
-                        </ul>
-                    </div>
-                    <!--End single-sidebar-->
-                </div>    
-            </div>
+        
             <!--End Sidebar Wrapper-->  
         </div>
     </div>
